--- a/hurumap_tz/templates/homepage.html
+++ b/hurumap_tz/templates/homepage.html
@@ -1,1 +1,16 @@
 {% extends 'homepage.html' %}{% load humanize partition staticfiles %}
+
+{% block homepage_javascripb_libs %}
+  {{ block.super }}
+  <script src="{% static 'js/maps_mapit.js' %}"></script>
+
+  <!-- Background Image Interactivity -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      $('.img-bg').on('click', function () {
+        $('.img-bg').not(this).removeClass('active');
+        $(this).toggleClass('active');
+      });
+    });
+  </script>
+{% endblock %}
