draw surrounding features using mapit

--- a/hurumap_tz/templates/profile/profile_detail.html
+++ b/hurumap_tz/templates/profile/profile_detail.html
@@ -1,4 +1,4 @@
-{% extends 'profile/profile_detail.html' %}
+{% extends 'profile/profile_detail.html' %} {% load staticfiles %}
 
 {% block profile_detail %}
   {% if not demographics.is_missing %}
@@ -503,5 +503,22 @@
       </div>
     </article>
   {% endif %} <!-- end if -->
+
+  {% include 'settings_js.html' %}
+  {% block body_javascript %}
+    {{ block.super }}
+
+    {% block profile_javascript_libs %}
+      <script src="{% static 'js/vendor/leaflet-0.6.4.js' %}"></script>
+      <script src="{% static 'js/vendor/topojson.v1.min.js' %}"></script>
+      <script src="{% static 'js/vendor/leaflet.label.js' %}"></script>
+      <script src="{% static 'js/charts.js' %}"></script>
+      <script src="{% static 'js/head2head.js' %}"></script>
+      <script src="{% static 'js/maps_static.js' %}"></script>
+      <script src="{% static 'js/profile_map.js' %}"></script>
+      <script src="{% static 'js/maps_mapit.js' %}"></script>
+      <script src="{% static 'js/profile_map_mapit.js' %}"></script>
+    {% endblock %}
+  {% endblock %}
 
 {% endblock %}
