--- a/hurumap_tz/templates/homepage.html
+++ b/hurumap_tz/templates/homepage.html
@@ -2,5 +2,6 @@
 
 {% block homepage_javascripb_libs %}
   {{ block.super }}
-  <script src="{% static 'js/maps_mapit.js' %}"></script>
+  <script src="{% static 'js/profile_map_mapit.js' %}"></script>
+  <script src="{% static 'js/map_mapit.js' %}"></script>
 {% endblock %}
