--- a/hurumap_tz/templates/profile/profile_detail.html
+++ b/hurumap_tz/templates/profile/profile_detail.html
@@ -507,7 +507,8 @@
   {% include 'settings_js.html' %}
     {% block profile_javascript_libs %}
       {{ block.super }}
-      <script src="{% static 'js/maps_mapit.js' %}"></script>
+      <script src="{% static 'js/map_mapit.js' %}"></script>
+      <script src="{% static 'js/profile_map_mapit.js' %}"></script>
     {% endblock %}
 
 {% endblock %}
